Chapter_04_To_The_Cloud/3.04/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: log-ping-routes
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: / # When a user accesses /pingpong, the Gateway will rewrite the path to /, then forward it to pingpong-service.
      backendRefs:
        - name: pingpong-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: log-output-service
          port: 80
